# Arcana

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  POLICY.md  README.md  api.md  cabiplan.md  correctness.md  desktopbringup.md  desktopplan.md  drain.md  findings_closer_program.md  llm.md  migrate.md  opaque_types_bumper.md  placeview.md  portplan.md  problemplan.md  process.md  providerplan.md  recordheadplan.md  sbplan.md  std_bumper_plan.md  struct.md  textplan.md  tmp_review_2026-04-15.md  winapi.md  winapiplan.md  winbuild.md  winfactor.md  winfix.md  winfix2.md
.ci/: language_freeze_exceptions.txt
.github/workflows/: ci.yml
conformance/: selfhost_language_matrix.toml
conformance/check_parity_fixtures/: borrowed_slice_list.arc  borrowed_slice_mut_str.arc  cleanup_footer_bad_target.arc  cleanup_footer_reassign.arc  cleanup_footer_stray.arc  cleanup_footer_unknown_target.arc  headed_regions_bind_preserve_on_let.arc  headed_regions_bind_preserve_payload_type.arc  headed_regions_bind_replace_payload_type.arc  headed_regions_construct_duplicate_field.arc  headed_regions_construct_duplicate_payload.arc  headed_regions_invalid_bind_modifier.arc  headed_regions_invalid_construct.arc  headed_regions_invalid_construct_place_type.arc  headed_regions_invalid_construct_skip.arc  headed_regions_invalid_memory_family.arc  headed_regions_invalid_memory_key.arc  headed_regions_invalid_nested.arc  headed_regions_invalid_owner_exit.arc  headed_regions_invalid_recycle_continue.arc  headed_regions_invalid_recycle_return.arc  headed_regions_missing_modifier.arc  headed_regions_unknown_head.arc  headed_regions_unsupported_memory_family_key.arc  invalid_boundary_payload.arc  invalid_chain_contract_key.arc  invalid_chain_contract_phase.arc  invalid_stage_contract_key.arc  invalid_statement_foreword.arc  malformed_intrinsic.arc  memory_phrase_arg_arity.arc  missing_chain_contract.arc  non_arc_fixture.txt  page_rollup_bad_subject.arc  page_rollup_reassign.arc  page_rollup_stray.arc  page_rollup_unknown_subject.arc  parse_error.arc  phrase_arg_arity.arc  phrase_arg_shape.arc  (+10 more)
crates/arcana-aot/: Cargo.toml
crates/arcana-cabi/: Cargo.toml
crates/arcana-cli/: Cargo.toml
crates/arcana-cli/src/: build_context.rs  launcher.rs  main.rs  package_cmd.rs  runner.rs  runtime_delegate.rs  runtime_exec.rs  runtime_main.rs
crates/arcana-desktop-runtime/: Cargo.toml
crates/arcana-frontend/: Cargo.toml
crates/arcana-frontend/src/: api_fingerprint.rs  lib.rs  semantic_types.rs  surface.rs  trait_contracts.rs  type_resolve.rs  type_validate.rs  where_clause.rs
crates/arcana-hir/: Cargo.toml
crates/arcana-ir/: Cargo.toml
crates/arcana-language-law/: Cargo.toml
crates/arcana-package/: Cargo.toml
crates/arcana-package/src/: build.rs  build_identity.rs  distribution.rs  fingerprint.rs  lib.rs  publish.rs  versioning.rs
crates/arcana-runtime/: Cargo.toml
crates/arcana-runtime/src/: api_abi.rs  app_input.rs  binding_transport.rs  evaluator.rs  host_core_policy.rs  intrinsic_resolution.rs  json_abi.rs  lib.rs  native_abi.rs  native_host.rs  native_product_loader.rs  package_image.rs  process_runtime_host.rs  routine_plan.rs  runtime_intrinsics.rs  runtime_types.rs  source_provider.rs  test_parse.rs  tests.rs  text_engine.rs  view_runtime.rs
crates/arcana-runtime/src/app_input/: buffered_host.rs
crates/arcana-runtime/src/core_intrinsics/: collections.rs  concurrent.rs  ecs.rs  memory.rs  mod.rs  system.rs  text.rs
crates/arcana-runtime/src/intrinsic_resolution/: collections.rs  concurrent.rs  ecs.rs  memory.rs  system.rs  text.rs
crates/arcana-syntax/: Cargo.toml
crates/arcana-winapi/: Cargo.toml
crates/arcana-winapi-gen/: Cargo.toml
crates/arcana-winapi/src/: lib.rs
docs/: arcana-v0.md  rewrite-roadmap.md  seed-import.md
docs/reference/: README.md
docs/specs/: meadow_language_behavior_audit_v1.md  spec-status.md
examples/arcana-desktop-proof/: README.md  book.toml
examples/arcana-text-proof/: book.toml
examples/arcana_showcase/: book.toml
examples/arcana_showcase_v2/: book.toml
examples/arena_ast_builder/: book.toml
examples/arena_id_safety/: book.toml
examples/arena_reset_cycle/: book.toml
examples/array_core/: book.toml
examples/async_channel/: book.toml
examples/atomic_counter/: book.toml
examples/audio_smoke_demo/: book.toml
examples/chain_forward_pipeline/: book.toml
examples/cleanup-footer-examples/: book.toml
examples/enum_match_core/: book.toml
examples/events_poll_demo/: book.toml
examples/forewords-proof/: README.md  book.toml
examples/forewords_builtin_app/: book.toml
examples/frame_scratch_cycle/: book.toml
examples/grimoire_behavior_app/: book.toml
examples/grimoire_counter_app/: book.toml
examples/grimoire_ecs_mini_game/: book.toml
examples/grimoire_ecs_schedule/: book.toml
examples/grimoire_namespaced_use/: book.toml
examples/grimoire_std_methods_app/: book.toml
examples/grimoire_ui_lib/: book.toml
examples/grimoire_window_app/: book.toml
examples/hello/: book.toml
examples/input_tester/: book.toml
examples/interop_boundary_contracts/: book.toml
examples/life_lab/: book.toml
examples/list_index_compound/: book.toml
examples/list_slice_range/: book.toml
examples/operators_concat_assign/: book.toml
examples/page_rollup_cleanup/: book.toml
examples/pair_try_pop/: book.toml
examples/plan13_box_generic/: book.toml
examples/plan13_generics_match/: book.toml
examples/plan13_result_generic/: book.toml
examples/records/: book.toml
examples/selfhost_bytecode_writer_tool/: book.toml
examples/selfhost_frontend_mvp/: book.toml
examples/selfhost_host_tool_mvp/: book.toml
examples/selfhost_ir_dump_tool/: book.toml
examples/split_join/: book.toml
grimoires/: README.md
oldplans/: accessplan.md  bindingplan.md  cabi.md  cabiplan.md  cleanupfooterplan.md  desktopbringup.md  desktoprebuild.md  forewords.md  globaldeps.md  memplan.md  rawplan.md  refactorplan.md  regionheadsplan.md  shackleplan.md  textsmoke.md  valueplan.md
std/: book.toml
tmp/: milestone_6_7_review_findings.md
(+775 files in other folders)
