[workspace]
members = [
    "crates/arcana-aot",
    "crates/arcana-cabi",
    "crates/arcana-cli",
    "crates/arcana-frontend",
    "crates/arcana-hir",
    "crates/arcana-ir",
    "crates/arcana-language-law",
    "crates/arcana-package",
    "crates/arcana-runtime",
    "crates/arcana-syntax",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Weaver"]
license = "MIT"

[workspace.dependencies]
arcana-aot = { path = "crates/arcana-aot" }
arcana-cabi = { path = "crates/arcana-cabi" }
arcana-frontend = { path = "crates/arcana-frontend" }
arcana-hir = { path = "crates/arcana-hir" }
arcana-ir = { path = "crates/arcana-ir" }
arcana-language-law = { path = "crates/arcana-language-law" }
arcana-package = { path = "crates/arcana-package" }
arcana-runtime = { path = "crates/arcana-runtime" }
arcana-syntax = { path = "crates/arcana-syntax" }
font8x8 = "0.3"
libloading = "0.8"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_stacker = "0.1"
sha2 = "0.10"
toml = "0.8"
windows-sys = "0.59"
