[package]
name = "arcana-cli"
version.workspace = true
edition.workspace = true

[features]
default = []
runtime-runner = ["dep:arcana-runtime"]

[dependencies]
arcana-aot.workspace = true
arcana-frontend.workspace = true
arcana-ir.workspace = true
arcana-package.workspace = true
arcana-runtime = { workspace = true, optional = true }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
libloading.workspace = true

[target.'cfg(windows)'.dev-dependencies]
# Windows-only desktop/native-host test harness helpers.
# This is not part of the package binding seam.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "arcana"
path = "src/main.rs"

[[bin]]
name = "arcana-runner"
path = "src/runtime_main.rs"
required-features = ["runtime-runner"]
