[package]
name = "arcana-cli"
version.workspace = true
edition.workspace = true

[features]
default = []
runtime-runner = ["dep:arcana-runtime"]
legacy-native-host-tests = []

[dependencies]
arcana-aot.workspace = true
arcana-frontend.workspace = true
arcana-ir.workspace = true
arcana-package.workspace = true
arcana-runtime = { workspace = true, optional = true }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
libloading.workspace = true

[[bin]]
name = "arcana"
path = "src/main.rs"

[[bin]]
name = "arcana-runner"
path = "src/runtime_main.rs"
required-features = ["runtime-runner"]
