[package]
name = "arcana-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
arcana-cabi.workspace = true
arcana-hir.workspace = true
arcana-ir.workspace = true
arcana-language-law.workspace = true
arcana-package.workspace = true
arcana-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
