[package]
name = "arcana-package"
version.workspace = true
edition.workspace = true

[dependencies]
arcana-aot.workspace = true
arcana-cabi.workspace = true
arcana-hir.workspace = true
arcana-ir.workspace = true
arcana-syntax.workspace = true
goblin = "0.9"
pathdiff.workspace = true
sha2.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
libloading.workspace = true
