[package]
name = "arcana-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
arcana-aot.workspace = true
arcana-cabi.workspace = true
arcana-ir.workspace = true
arcana-language-law.workspace = true
libloading.workspace = true
pathdiff.workspace = true
serde.workspace = true
serde_json.workspace = true
stacker.workspace = true
serde_stacker.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
arcana-frontend.workspace = true
arcana-package.workspace = true
